<resources>
    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_profile">PROFILE</string>
    <string name="name">Fullname</string>
    <string name="home_title">Home</string>
    <string name="show_all">Show all users</string>
    <string name="back">back</string>
</resources>
